Add update and delete functions
